...
    <androidx.camera.view.PreviewView
        android:id="@+id/pv_view_finder"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageButton
        android:id="@+id/btn_capture"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/camera_shutter"
        app:layout_constraintBottom_toBottomOf="parent"
...
        android:indeterminateTint="@color/md_theme_light_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_switch_camera"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/switch_camera"
...
